Fix stalled project indicator not showing up

--- a/app/main.module.scss
+++ b/app/main.module.scss
@@ -331,7 +331,8 @@
         font-size: 0.9em;
       }
 
-      &.small {
+      &.dot {
+        @include shared.badge-like(shared.$orange-hue);
         font-size: 0.7em;
         padding: 0;
       }
